# Zip-dLBM

./: Zip_dLBM_simple.ipynb  demo.ipynb  demo_explanation.md  main.py  paper.md  pyproject.toml  simplified_implementation.ipynb
notebooks/: ddlbm_london_simplified.ipynb
